# crewai-video-study-guide

./: .crewai  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  README.md  commit_changes.bat  commit_changes.sh  config.py  crew.py  crew_fast.py  final_commit.bat  fix_502_error.bat  fix_config_error.bat  fix_deployment.bat  fix_offline_issue.bat  main.py  main_crew.py  pyproject.toml  requirements.txt  setup.py  setup_gemini.py  simple_crew.py  speed_comparison.md  ultra_simple_fix.bat  video_tools.py
src/: __init__.py  config.py  crew.py  gemini_tools.py  main.py  tools.py
src/crewai_video_study_guide/: __init__.py  crew.py  crew_simple.py  main.py
src/crewai_video_study_guide/config/: agents.yaml  tasks.yaml
src/crewai_video_study_guide/tools/: video_tools.py
